# python-project-lvl4

./: .dockerignore  .env  .gitignore  Procfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirement.txt  requirements.txt  setup.cfg
.github/workflows/: pytest.yml
docker/: .env_example  Dockerfile  README.md  docker-compose.yml
labels/: forms.py  models.py  urls.py  views.py
labels/migrations/: 0001_initial.py
labels/tests/: conftest.py  test_labels.py  test_urls.py
statuses/: forms.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/tests/: conftest.py  test_statuses.py  test_urls.py
task_manager/: admin.py  apps.py  forms.py  mixins.py  models.py  settings.py  urls.py  views.py
task_manager/forms/: other_forms.py  statuses_forms.py  user_form.py  users_forms.py
task_manager/migrations/: 0001_initial.py  0002_alter_task_options_alter_task_author_and_more.py  0003_labeltaskintermediate_alter_task_executor_and_more.py  0004_remove_labeltaskintermediate_label_link_and_more.py
task_manager/templates/: authorization.html  base.html  copy base.html  copy.html  delete_page.html  delete_user.html  form_view.html  main.html  table.html  table_head.html  test.html  users.html
task_manager/templatetags/: menu_tags.py  table_tags.py
task_manager/test/: conftest.py  test_labels.py  test_labels_statuses.py  test_statuses.py  test_tasks.py  test_urls.py  test_users.py
task_manager/tests/: conftest.py  test_home_page.py  (+3 more)
tasks/: forms.py  models.py  urls.py  views.py
users/: forms.py  urls.py  views.py
(+19 files in other folders)
